--- a/sparql-intro.ipynb
+++ b/sparql-intro.ipynb
@@ -3810,7 +3810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -3864,7 +3864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -3942,22 +3942,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also do spatial queries; this one looks coins from mints within 50 km of Athens."
+    "We can also do spatial queries; this one looks coins from mints within 50 km of Athens.\n",
+    "\n",
+    "It also specifies the format in which we wants the results returned, and to write these results to a json file for further manipulation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div class=\"krn-spql\"><div class=\"magic\">Return format: ANY</div><div class=\"magic\">Display: table</div></div>"
+       "<div class=\"krn-spql\"><div class=\"magic\">Return format: JSON</div><div class=\"magic\">Display: table</div><div class=\"magic\">Output file: mints.json</div></div>"
       ],
       "text/plain": [
-       "Return format: ANY\n",
-       "Display: table\n"
+       "Return format: JSON\n",
+       "Display: table\n",
+       "Output file: mints.json\n"
       ]
      },
      "metadata": {},
@@ -4058,8 +4061,9 @@
     }
    ],
    "source": [
-    "%format any\n",
+    "%format json  \n",
     "%display table \n",
+    "%outfile mints.json \n",
     "PREFIX rdf:\t<http://www.w3.org/1999/02/22-rdf-syntax-ns#>\n",
     "PREFIX dcterms:\t<http://purl.org/dc/terms/>\n",
     "PREFIX geo:\t<http://www.w3.org/2003/01/geo/wgs84_pos#>\n",
@@ -4078,29 +4082,6 @@
     "         a nmo:Mint\n",
     "  FILTER langMatches (lang(?label), 'en')\n",
     "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"krn-spql\"><div class=\"magic\">Output file: mints.json</div></div>"
-      ],
-      "text/plain": [
-       "Output file: mints.json\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# and we can write this to file\n",
-    "%outfile mints.json"
    ]
   },
   {
